# abacus-public

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Makefile  README.md  autogen-config.sh  common.mk.in  configure  configure.ac  optional-requirements.txt  requirements.txt  valgrind.supp
Abacus/: GenParam.py  InputFile.py  Makefile  ReadAbacus.py  Reglob.py  Tools.py  WriteAbacus.py  __init__.py  abacus.py  abacus_to_desi_hdf5.py  change_cpd.py  choose_cpd.py  convert_derivs_to_float32.py  convert_particles_to_ic.py  convert_state_precision.py  convert_to_abacus.py  derivatives.py  fast_cksum  globus.py  move_node_states.py  pack14_lite.py  standalone_fof.py  transpose_ic.py  zeldovich.py
Abacus/Cosmology/: .gitignore  Makefile  README  __init__.py  bind.cpp  setup.py  test.py
Abacus/fast_cksum/: Makefile  _crc32_fast.c  build_cffi.py  cksum_ffi.py  cksum_io.py
Abacus/post/: cleaning.py  group_tasks.py  groups.py  halo_lc_gather.py  lc.py  lc_healpix.py  lc_tasks.py  merger.py  merger_utils.py  plan_cleaning.py  power_tasks.py  state_log.py  timeslice.py  timeslice_tasks.py
Analysis/: Makefile  common.py
Analysis/PairCounting/: out_of_corrfunc.py  run_corrfunc.py  utils.py
Analysis/PowerSpectrum/: Makefile  __init__.py  run_PS.py  setup.py
Analysis/Rockstar/: .gitignore  CHANGELOG  Makefile  abacus.cfg.template  check_syscalls.c  check_syscalls.h  client.c  config.template.h  halo.h  rockstar.c  rockstar.py  server.c  server.h
Configuration/: config.site.example
Configuration/m4/: ax_check_cuda.m4  ax_ext.m4
Convolution/: .gitignore  ConvolutionIOThread.cpp  ConvolutionLibrary.cpp  ConvolutionParametersStatistics.cpp  CufftErrors.h  FakeConvolution.py  InCoreConvolution.cpp  Makefile  OutofCoreConvolution.cpp  OutofCoreConvolution.h  ParallelConvolution.cpp  ParallelConvolution.h  block_io_utils.cpp  convolutionwrapper.cpp
Derivatives/: .gitignore  CheckAD.cpp  CreateDerivatives.cpp  GenerateAD.cpp  Makefile  Order32  derivatives.cpp  order32derivatives.cpp  quad_double.cpp
DirectIO/: README.md  checksums.h  file.cpp  file.h  io_interface.h  iolib.cpp  read_dio.cpp  read_dio.h  write_dio.cpp  write_dio.h
ParseHeader/: HeaderStream.cc  Makefile  NOTES  ParseHeader.cc  ParseHeader.hh  phDriver.cc  phDriver.hh  phParser.yy  phScanner.ll  stringutil.cc  stringutil.hh
Production/: README.md  directory.def  run_sim.py
Production/AbacusSummit/: README.md  assembly_line.py  modules.sh  production.lsf  rhea_assembly_line.slurm  rhea_htar.slurm  rhea_ic_creation.slurm  rhea_post_process.sh  rhea_post_process_epilogue.slurm  rhea_post_process_lightcones.py  rhea_post_process_lightcones_epilogue.sh  rhea_post_process_timeslice.py  rhea_post_process_timeslice_epilogue.sh  serial_production_summit.lsf  serial_summit.sh  stages.py  summit_assembly_line_sleeper.sh  verify_transfer.sh
Production/Abacus_DESI2_c000_ph300/: abacus.par2  job.sbatch  post-groups.sbatch  post-hpss.sbatch  post-power.sbatch  post-slice.sbatch
Production/Backlight/: 01-post-groups.sbatch  02-post-associations.sbatch  03-post-cleaning.sbatch  04-post-halo-lc.sbatch  05-post-lc.sbatch  06-post-log.sbatch  cosmo_params_final.txt  generate_par2.py  run_sim.py  sim.sbatch
Production/Example/: 01-post-groups.sbatch  (+12 more)
Tests/: Makefile  README.md  template.py  test.def
ci/: Dockerfile  Jenkinsfile  spack.yaml
clibs/: Makefile  readabacus.cpp  readabacus.h
doc/: CodeUnits.v1  Makefile  checksums.md  cosmology_equations.tex  groupfinding.tex  light_cones.tex  lpt.tex  ramdisk.md  spack.md  user_guide.tex  valgrind.md
env/: README.md  perlmutter.sh
include/: .gitignore  AbacusComplex.hh  AbacusVector.hh  Cosmology.cpp  Cosmology.h  MurmurHash3.cpp  PTimer.cc  PTimer.h  Parameters.cpp  STimer.cc  STimer.h  StructureOfLists.cc  avx512_calls.c  avx512_calls.h  avxabrev.h  binning.cpp  cell_header.h  config.h.in  euler16.c  factorial.cpp  fast_acos.h  fast_cksum  float3p1.cpp  function_precision.h  header.cpp  healpix_shortened.c  log.cc  mpi_header.cpp  mpi_limiter.h  multiappendlist.cpp  multimergesort.cpp  numa_for.h  packN_storage.cpp  parallel.partition.cpp  parallel_stable_sort.h  particle_subsample.cpp  promote_numeric.h  simple_concurrent_queue.cpp  stdlog.cc  sym3eigenval.cpp  (+2 more)
singlestep/: Makefile  README  benchmark_io.cpp  recover_multipoles.cpp  singlestep.cpp  standalone_fof.cpp
util/: .gitignore  Makefile  cellcount_pack14.cpp  dump_double3.c  dump_float3.c  dump_pack14.cpp  dump_rvdouble.c  dump_uint64.c  pack14_to_rvdouble.cpp  pack14_to_rvfloat.cpp  phdata.c  phgrep  phheader.c  phkey  util_header.h  util_main.c
(+216 files in other folders)
